Sprint 3 과제 제출