@@ -5,6 +5,8 @@ import com.sprint.mission.discodeit.dto.message.MessageResponse;
 import com.sprint.mission.discodeit.dto.message.MessageUpdateRequest;
 import com.sprint.mission.discodeit.entity.Message;
 import com.sprint.mission.discodeit.exception.MessageNotFoundException;
+import com.sprint.mission.discodeit.exception.MessageNotInputException;
+import com.sprint.mission.discodeit.exception.StatusNotFoundException;
 import com.sprint.mission.discodeit.exception.UserNotFoundException;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
@@ -14,8 +16,8 @@ import com.sprint.mission.discodeit.service.MessageService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 
 @Service
@@ -29,26 +31,33 @@ public class BasicMessageService implements MessageService {
 
     @Override
     public MessageResponse create(MessageCreateRequest req) {
-        if (req == null) throw new IllegalArgumentException("request is null");
-        if (req.channelId() == null) throw new IllegalArgumentException("channelId is null");
-        if (req.userId() == null) throw new IllegalArgumentException("userId is null");
+        requireNonNull(req, "request");
+        requireNonNull(req.channelId(), "channelId");
+        requireNonNull(req.userId(), "userId");
+
         if (req.content() == null || req.content().isBlank()) {
-            throw new IllegalArgumentException("content is blank");
+            throw new MessageNotInputException();
         }
 
-        // 존재 검증 (Repository가 없으면 예외 던진다는 전제)
-        channelRepository.findChannel(req.channelId());
-        if (userRepository.findById(req.userId()).isEmpty()) throw new UserNotFoundException();
+        // 존재 검증
+        channelRepository.findChannel(req.channelId()); // 없으면 ChannelNotFoundException
+        if (userRepository.findById(req.userId()) == null) {
+            throw new UserNotFoundException();
+        }
 
         // 첨부파일(선택) 정리 + 방어적 복사
         List<UUID> attachmentIds = (req.attachmentIds() == null) ? List.of() : List.copyOf(req.attachmentIds());
 
-        // 첨부파일 검증 (중복 제거 후 비교)
+        // 첨부파일 존재 검증(중복 제거 후 비교)
         if (!attachmentIds.isEmpty()) {
-            List<UUID> distinctIds = attachmentIds.stream().distinct().toList();
+            List<UUID> distinctIds = attachmentIds.stream()
+                    .filter(Objects::nonNull)
+                    .distinct()
+                    .toList();
+
             var found = binaryContentRepository.findAllByIdIn(distinctIds);
             if (found.size() != distinctIds.size()) {
-                throw new IllegalArgumentException("attachmentIds contains non-existing id");
+                throw new StatusNotFoundException();
             }
         }
 
@@ -66,9 +75,9 @@ public class BasicMessageService implements MessageService {
 
     @Override
     public List<MessageResponse> findAllByChannelId(UUID channelId) {
-        if (channelId == null) throw new IllegalArgumentException("channelId is null");
+        requireNonNull(channelId, "channelId");
 
-        channelRepository.findChannel(channelId);
+        channelRepository.findChannel(channelId); // 없으면 ChannelNotFoundException
 
         return messageRepository.findAllByChannelId(channelId).stream()
                 .map(this::toResponse)
@@ -77,10 +86,11 @@ public class BasicMessageService implements MessageService {
 
     @Override
     public MessageResponse update(MessageUpdateRequest req) {
-        if (req == null) throw new IllegalArgumentException("request is null");
-        if (req.messageId() == null) throw new IllegalArgumentException("messageId is null");
+        requireNonNull(req, "request");
+        requireNonNull(req.messageId(), "messageId");
+
         if (req.content() == null || req.content().isBlank()) {
-            throw new IllegalArgumentException("content is blank");
+            throw new MessageNotInputException();
         }
 
         Message message = messageRepository.findById(req.messageId())
@@ -94,31 +104,41 @@ public class BasicMessageService implements MessageService {
 
     @Override
     public void delete(UUID messageId) {
-        if (messageId == null) throw new IllegalArgumentException("messageId is null");
+        requireNonNull(messageId, "messageId");
 
         Message message = messageRepository.findById(messageId)
                 .orElseThrow(MessageNotFoundException::new);
 
         List<UUID> attachmentIds = (message.getAttachmentIds() == null)
-                ? Collections.emptyList()
-                : message.getAttachmentIds();
+                ? List.of()
+                : List.copyOf(message.getAttachmentIds());
 
         for (UUID attachmentId : attachmentIds) {
-            binaryContentRepository.delete(attachmentId);
+            if (attachmentId != null) {
+                binaryContentRepository.delete(attachmentId); // 없으면(StatusNotFoundException 등) 구현체 기준
+            }
         }
 
         messageRepository.delete(messageId);
     }
 
     private MessageResponse toResponse(Message m) {
+        List<UUID> attachmentIds = (m.getAttachmentIds() == null) ? List.of() : List.copyOf(m.getAttachmentIds());
+
         return new MessageResponse(
                 m.getId(),
                 m.getChannelId(),
                 m.getUserId(),
                 m.getContent(),
-                m.getAttachmentIds() == null ? List.of() : m.getAttachmentIds(),
+                attachmentIds,
                 m.getCreatedAt(),
                 m.getUpdatedAt()
         );
+    }
+
+    private static <T> void requireNonNull(T value, String name) {
+        if (value == null) {
+            throw new IllegalArgumentException(name + " null이 될 수 없습니다.");
+        }
     }
 }
